--- a/themes/ESGI/src/scss/style.scss
+++ b/themes/ESGI/src/scss/style.scss
@@ -16,3 +16,10 @@ Tags: TPs
 
 @import 'vendor/normalize.css';
 @import 'vendor/bootstrap.min.css';
+
+@import 'partials/fonts';
+@import 'partials/globals';
+@import 'partials/header';
+@import 'partials/footer';
+@import 'partials/identity-card';
+@import 'partials/post-list';
