--- a/themes/ESGI/style.css
+++ b/themes/ESGI/style.css
@@ -1,4 +1,4 @@
-/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+@import url(https://fonts.googleapis.com/css2?family=Overpass:ital,wght@0,400;0,700;1,400;1,700&display=swap);@import url(https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,300;0,600;1,300;1,600&display=swap);@import url(https://fonts.googleapis.com/css2?family=Source+Serif+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap);/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 
 /* Document
    ========================================================================== */
@@ -368,3 +368,294 @@ License URI: http://www.gnu.org/licenses/gpl-2.0.html
 Text Domain: ESGI
 Tags: TPs
 */
+html {
+  --text-color: #000;
+  --main-color: #3F51B5;
+  --grey: #555;
+  --light-grey: #AAA;
+  --bg-color: #FFF;
+  font-family: "Source Serif Pro", serif;
+}
+
+body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
+}
+body.dark {
+  --text-color: #FFF;
+  --bg-color: #000;
+}
+
+img {
+  max-width: 100%;
+}
+
+figure {
+  margin: 0;
+}
+
+.page-title, .post-title {
+  text-align: center;
+  margin-bottom: 2.125rem;
+  font-family: "Overpass", sans-serif;
+  font-size: 1.5625rem;
+  line-height: auto;
+  letter-spacing: 0.1em;
+}
+
+.page-content, .post-content {
+  font-family: "Source Serif Pro", serif;
+  font-size: 1rem;
+  letter-spacing: 0.03em;
+  line-height: 1.6875rem;
+}
+.page-content a, .post-content a {
+  color: var(--main-color);
+  text-decoration: none;
+}
+.page-content a:hover, .post-content a:hover {
+  text-decoration: underline;
+}
+
+.single-post header img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 800px;
+  width: 2rem;
+  height: 2rem;
+  margin-right: 0.625rem;
+}
+.single-post header .post-meta {
+  font-family: "Overpass", sans-serif;
+  font-size: 0.8125rem;
+  line-height: 1.3125rem;
+  letter-spacing: 0.05em;
+  text-align: center;
+  margin-bottom: 2.125rem;
+}
+.single-post header .post-meta time {
+  margin-left: 2.625rem;
+}
+.single-post .post-image {
+  margin-bottom: 2.125rem;
+}
+.single-post .post-image img {
+  width: 100%;
+  max-height: 18.75rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.social-block {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 2rem 0;
+}
+.social-block h1 {
+  font-family: "Source Serif Pro", serif;
+  font-size: 1rem;
+  line-height: 1.6875rem;
+  letter-spacing: 0.03em;
+}
+.social-block ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1.5625rem;
+}
+.social-block ul a svg {
+  height: 1.125rem;
+}
+.social-block ul a svg path {
+  fill: var(--text-color);
+  transition: fill 0.3s;
+}
+.social-block ul a:hover svg path {
+  fill: var(--main-color);
+}
+
+#site-header {
+  font-family: "Overpass", sans-serif;
+  padding: 1.5rem 0 7.625rem;
+  font-family: "Overpass", sans-serif;
+  font-size: 1rem;
+  line-height: 1.49;
+  letter-spacing: 0.1em;
+}
+#site-header ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
+}
+#site-header ul li.current-menu-item a, #site-header ul li.current_page_parent a, #site-header ul li:hover a {
+  background-color: var(--main-color);
+  color: #FFF;
+}
+#site-header ul li a {
+  padding: 0.5625rem 0.4375rem;
+  display: block;
+  text-decoration: none;
+  line-height: 1;
+  color: var(--text-color);
+  margin: 0 1.5rem;
+  transition: color 0.3s, background-color 0.3s;
+}
+
+#site-footer {
+  font-family: "Source Serif Pro", serif;
+  border-top: solid thin var(--light-grey);
+  margin-top: 2.125rem;
+  padding: 4.125rem 0;
+  text-align: center;
+}
+#site-footer #searchform {
+  margin: 2.125rem 0;
+}
+#site-footer #searchform input {
+  border: solid thin var(--light-grey);
+}
+#site-footer #searchform [type=submit] {
+  border: none;
+  background-color: transparent;
+  transition: color 0.3s;
+  font-family: "Source Serif Pro", serif;
+  font-size: 1rem;
+  line-height: 1.6875rem;
+  letter-spacing: 0.03em;
+}
+#site-footer #searchform [type=submit]:hover {
+  color: var(--main-color);
+}
+
+.identity-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5.875rem 0 2.125rem;
+}
+.identity-card figure img {
+  width: 6.375rem;
+  height: 6.375rem;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+  border-radius: 800px;
+  margin-bottom: 1.5rem;
+}
+.identity-card h1 {
+  font-family: "Overpass", sans-serif;
+  font-size: 1.5625rem;
+  line-height: auto;
+  letter-spacing: 0.1em;
+  margin-bottom: 3rem;
+}
+.identity-card h2 {
+  font-family: "Roboto Mono", monospace;
+  font-size: 1rem;
+  line-height: 1.6875rem;
+  letter-spacing: 0;
+  color: var(--grey);
+  margin-bottom: 2.125rem;
+}
+.identity-card footer ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 1.5625rem;
+}
+.identity-card footer ul a svg {
+  height: 1.125rem;
+}
+.identity-card footer ul a svg path {
+  fill: var(--text-color);
+  transition: fill 0.3s;
+}
+.identity-card footer ul a:hover svg path {
+  fill: var(--main-color);
+}
+
+.post-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+}
+.post-list a {
+  color: inherit;
+  text-decoration: none;
+  transition: color 0.3s;
+  display: block;
+}
+.post-list a:hover {
+  color: var(--main-color);
+}
+.post-list article {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 1.875rem;
+}
+.post-list article h1 {
+  flex: 1;
+  font-size: 1rem;
+  line-height: 1.49;
+  letter-spacing: 0.1em;
+  padding-right: 2em;
+}
+.post-list article time {
+  flex-shrink: 0;
+  color: var(--grey);
+  font-size: 0.8125rem;
+  line-height: 1.75;
+  letter-spacing: 0.05em;
+  font-family: "Overpass", sans-serif;
+}
+
+.post-list-pagination {
+  text-align: center;
+  color: var(--grey);
+  font-size: 0.8125rem;
+  line-height: 1.75;
+  letter-spacing: 0.05em;
+  font-family: "Overpass", sans-serif;
+}
+.post-list-pagination a {
+  text-decoration: none;
+  color: var(--text-color);
+  transition: color 0.3s;
+  display: inline-block;
+  padding-left: 0.5em;
+}
+.post-list-pagination a:hover {
+  color: var(--main-color);
+}
+.post-list-pagination .current {
+  position: relative;
+}
+.post-list-pagination .current::after {
+  content: "";
+  width: 100%;
+  height: 1px;
+  background-color: currentColor;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+}
+
+.post-list-wrapper {
+  padding: 4rem 0 1.25rem;
+  border-top: solid thin var(--light-grey);
+  margin: 0.75rem 0;
+}
