--- a/themes/ESGI/style.css
+++ b/themes/ESGI/style.css
@@ -524,6 +524,7 @@ figure {
   border: solid thin var(--light-grey);
 }
 #site-footer #searchform [type=submit] {
+  color: var(--text-color);
   border: none;
   background-color: transparent;
   transition: color 0.3s;
